--- a/puzzle7.html
+++ b/puzzle7.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Switch Case Color</title>
-  <title>Decoder</title><link rel="stylesheet" href="./style.css">
+  <title>Decoder</title><link rel="stylesheet" href="./style7.css">
 
 </head>
 <body>
@@ -26,7 +26,7 @@
   Click here to submit password and view website
  </a>
 <!-- partial -->
-  <script  src="./script.js"></script>
+  <script  src="./script7.js"></script>
 
 </body>
 </html>
