--- a/puzzle6.html
+++ b/puzzle6.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Switch Case Color</title>
-  <title>Decoder</title><link rel="stylesheet" href="./style.css">
+  <title>Decoder</title><link rel="stylesheet" href="./style6.css">
 
 </head>
 <body>
@@ -26,7 +26,7 @@
  </a>
 <body style="background-color:black;">
 <!-- partial -->
-  <script  src="./script.js"></script>
+  <script  src="./script6.js"></script>
 
 </body>
 </html>
