--- a/puzzle0.html
+++ b/puzzle0.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Intro page</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./style0.css">
 
 </head>
 <body>
