--- a/puzzle1.html
+++ b/puzzle1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Puzzle 1 </title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./style1.css">
 
 </head>
 <body>
@@ -19,7 +19,7 @@
   <img src="https://joeydelgado77.github.io/DondaEscapeRoom/collegedropout.jpg" style="width:110%;" alt="Album cover CD">
   <p> Hint: Kanye's debut album. (Capital sensitive) </p>
 <!-- partial -->
-  <script  src="./script.js"></script>
+  <script  src="./script1.js"></script>
 
 </body>
 </html>
