--- a/puzzle2.html
+++ b/puzzle2.html
@@ -11,7 +11,7 @@
 <p>Kanye just recently legally changed his name to this two letter word after using it for a nickname for many years.</p>
 <p> Enter the answer to reach your next puzzle, and be one step closer to finding out the offical release date.<p>  Hint: the letters are in his name, and they are capital. </p>
  <p>Password:<input id="passwordBox" type="password"/></p>
- <a href="monkdiamonddiscovery.html" onclick="return checkPassword();">
+ <a href="https://joeydelgado77.github.io/DondaEscapeRoom/puzzle3.html" onclick="return checkPassword();">
   Click here to submit password and view website
  </a>
 <body style="background-color:black;">
