--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <!-- partial:index.partial.html -->
 <div class="container">  <img src="https://joeydelgado77.github.io/DondaEscapeRoom/listeningparty.jpg" style="width:110%;" alt="Listening party">
  <! container is the image, signaling there will be writing on the image !>  
-  <div class="centered">Follow the hints of rap and fashion genius, Kanye West, to be the first to find out exactly who is on his newest album "Donda," and when it will be released to the public. </div> <button 
- 
- class="btn" type="button" id="button" onclick="window.location.href='">click here to begin
-</button>
-</div>                     
+  <div class="centered">Follow the hints of rap and fashion genius, Kanye West, to be the first to find out exactly who is on his newest album "Donda," and when it will be released to the public. Enter DONDA in the password box below to begin </div> 
+              
 <! onclick to begin the escape room>
 <!-- partial -->
+   <p>Password:<input id="passwordBox" type="password"/></p>
+ <a href="https://joeydelgado77.github.io/DondaEscapeRoom/puzzle12.html" onclick="return checkPassword();">
+  Click here to submit password and begin the escape room 
+ </a>
   
 </body>
 </html>
