--- a/puzzle44.html
+++ b/puzzle44.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Puzzle 4 </title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./style44.css">
 
 </head>
 <body>
@@ -21,7 +21,7 @@
 <p> Hint: Kanye can attribute some of his success due to his involvement in the _____ industry. (Starts with a capital letter) </p>  
 <body style="background-color:black;">
 <!-- partial -->
-  <script  src="./script.js"></script>
+  <script  src="./script44.js"></script>
 
 </body>
 </html>
